--- a/zoaib/package.json
+++ b/zoaib/package.json
@@ -28,6 +28,7 @@
     "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "animate-css-grid": "^1.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
